--- a/src/app/pages/cart/cart.page.scss
+++ b/src/app/pages/cart/cart.page.scss
@@ -19,3 +19,9 @@
     font-size: 16px; /* Tamaño de fuente */
   }
 }
+
+.total-label {
+  margin-right: 16px;
+  font-size: 1.2em;
+  font-weight: bold;
+}
